@@ -20,14 +20,8 @@
 		<td>Shows simple dynamic behaviors, on a single page.
 		</td>
 	</tr>
+
 	<tr valign="top">
-		<th><a href="adder">Adder</a>
-		</th>
-		<td>A very simple adding machine; shows off simple form input and validation, an the
-    use of a Foreach to iterate over a result set.
-		</td>
-	</tr>
-	<tr valign="top" bgcolor="silver">
 		<th><a href="hangman">Hangman</a>
 		</th>
 		<td>Basic implementation of the game of Hangman.  Guess letters one at a time
@@ -35,7 +29,7 @@
     as well as a Direct inside a Foreach.
 		</td>
 	</tr>
-	<tr valign="top">
+	<tr valign="top" bgcolor="silver">
 		<th><a href="border">Border</a>
 		</th>
 		<td><img align="right" border="0" hspace="4" src="images/show-inspector.gif">An example of a useful, reusable component, a common navigation border for a set of pages.
@@ -45,20 +39,20 @@
     application is constructed.  Check it out --- the Inspector the most impressive demo here.
 		</td>
 	</tr>
-	<tr valign="top" bgcolor="silver">
+	<tr valign="top">
 		<th><a href="survey">Survey</a>
 		</th>
 		<td>More advanced form handling demonstration, in a simulated database-driven application.
 		</td>
 	</tr>
-  <tr valign=top>
+  <tr valign=top  bgcolor="silver">
         <th><a href="portal">Portal</a></th>
         <td>An example of how Tapestry can be used to build data-driven Portals.</td>
       </tr>
       
-        <tr valign=top bgcolor="silver">
+        <tr valign=top>
         <th><a href="workbench">Workbench</a></th>
-        <td>Tapestry Component Workbench, used to show of the use of interesting Tapestry components.</td>
+        <td>Tapestry Component Workbench, used to show off the use of interesting Tapestry components.</td>
       </tr>
       
       </table>
