@@ -1,54 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
-<head>
-	<title>Adder Tutorial</title>
-</head>
-<body>
-
-<jwc id="ifError">
-<table border=1>
-	<tr>
-		<td bgcolor=red>
-			<span style="font: bolder 14pt; color:white">
-				<jwc id="insertError"/>
-			</span>
-		</td>
-	</tr>
-</table>
-<p>
-</jwc>
-
-<jwc id="form">
-
-<table>
-  <tr>
-    <td align=right>Value:</td>
-    <td><jwc id="inputNewValue"/></td>
-  </tr>
-  <tr>
-    <td> </td>
-    <td><input type=submit value="Add to list"></td>
-  </tr>
-</table>
-
-</jwc>
-
-<table>
-  <tr> <th>Items</th> </tr>
-  <tr jwcid="e" align=right>
-    <td>
-      <jwc id="insertCurrentValue"/> 
-    </td>
-  </tr>
-
-  <tr align=right>
-    <td> 
-      <hr>
-      <br><jwc id="insertTotal"/>
-    </td>
-  </tr>
-</table>
-
-</body>
-</html>
-
