@@ -15,6 +15,11 @@
   <page name="localization.Change" 
   	specification-path="/tutorial/workbench/localization/Change.jwc"/>
     
+  <page name="Fields" specification-path="/tutorial/workbench/fields/Fields.jwc"/>
+  <page name="fields.Results" specification-path="/tutorial/workbench/fields/Results.jwc"/>
+  
   <component-alias type="Border" specification-path="/tutorial/workbench/components/Border.jwc"/>
   <component-alias type="Palette" specification-path="/net/sf/tapestry/contrib/palette/Palette.jwc"/>
+  <component-alias type="ShowError" specification-path="/tutorial/workbench/components/ShowError.jwc"/>
+  
 </application>
