@@ -2,6 +2,14 @@
 <style>
 <--
 
+
+
+TABLE.inputError TD.message
+{
+  font-weight: bold;
+  font-size: smaller;
+}
+
 TABLE.content
 {
 	background-color: "#ffffcc";
