@@ -1,0 +1,13 @@
+<!-- $Id$-->
+
+<span jwcid="border">
+
+<table>
+	<tr>
+		<th>Integer Value</th>
+		<td><span jwcid="insertIntValue"/></td>
+	</tr>
+</table>
+
+</span>
+
