@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<!-- $Id$ -->
+<!DOCTYPE specification PUBLIC "-//Howard Ship//Tapestry Specification 1.1//EN"
+	"http://tapestry.sf.net/dtd/Tapestry_1_1.dtd">
+	
+<specification class="com.primix.tapestry.BasePage">
+
+<component id="border" type="Border"/>
+
+<component id="insertIntValue" type="Insert">
+	<binding name="value" property-path="visit.intValue"/>
+</component>
+
+</specification>
+
